Add change to trigger page redeployment

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <h1>Hello Internet! :^)</h1>
         <p>I am making a public page here!</p>
+        <p>Chaaaaaaaange</p>
     </body>
 
 </html>
